--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="app-bar">
             <h1>Welcome to Web Push Notifications</h1>
+            <h1>Slightly modified by Mo</h1>            
         </div>
         <div class="setup-complete">
             <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
