Updated setup complete text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>Slightly modified by Mo</h1>            
         </div>
         <div class="setup-complete">
-            <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
+            <p> 🎉 Congratulations! The test lab is working! 🎉</p>
         </div>
     </body>
 </html>
