Updated wording and URLs

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <div class="app-bar">
-        <h1>Welcome to Web Push Notifications</h1>
+        <h1>Mo's Lab For Web Push Notifications</h1>
     </div>
     <div class="setup-complete">
-        <p> 🎉 Congratulations! Your setup is complete to work on the course 🎉</p>
+        <p> 🎉 Congratulations! The lab is ready! 🎉</p>
     </div>
     <div class="buttons-container">
         <button id="btn-notify">SEND NOTIFICATION</button>
